* [F - 20/07/2025]: Changelog.txt : 
    - messages.properties aggiunti messaggi errori per la form cambio password
    - Creata form per il cambio password e il successo
    - userProfile.html aggiunta rotta sul modifica password
    - AuthConfiguration aggiunti path per i permessi
    - CredentialsService modificato metodo salva utente che mantiente il ruolo precedente dell'utente, o se nuovo 
        lo setta a DEFAULT.
    - UserController aggiunta logica per il cambio password
    - Creati ChangePasswordFormValidator e ChangePasswordForm dto per la form del cambio password

* [F - 17/07/2025]: Changelog.txt : 
    - Aggiunta vista showUserReservation.html per vedere tutte le prenotazioni di un utente
        specifico da parte dell'ADMIN
    - Aggiornata vista showAllUsers.html, possibile rimuovere anche gli utenti, e possibile vedere le prenotazioni
        dello specifico utente
    - AuthConfiguration.java aggiunti path per rimuovere utente e prenotazione di uno specifico utente da 
        parte dell'ADMIN
    - UserController.java aggiunta logica per rimuovere un utente
    - ReservationController.java aggiunta logica per vedere le prenotazioni di un utente da parte dell'ADMIN e cancellazione
        delle stesse

* [F - 17/07/2025]: Changelog.txt : 
    - Rimossa classe Table.java e corrispettivi

* [F - 17/07/2025]: Changelog.txt : 
    - reservationSuccessful.html spostata nella directory /user 
    - aggiunta pagina di successo per l'aggiornamento della prenotazione
    - aggiunta rotta alla dashboard dell'admin per vedere tutte le prenotazioni
    - AuthConfiguration.java aggiunte le rotte accessibili solo all'admin
    - Aggiunta logica in ReservationController.java per vedere tutte le prenotazioni
    - UserController.java aggiunta logica per mostrare tutti gli utenti registrati eccetto quello che chiede il servizio
    - Nuove viste per vedere tutti gli utenti e tutte le prenotazioni (showAllUsers, showAllReservation)
